--- a/coolSchool/coolSchool-backend/package.json
+++ b/coolSchool/coolSchool-backend/package.json
@@ -1,10 +1,10 @@
 {
   "name": "ruber-backend",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
@@ -13,7 +13,8 @@
     "express": "^4.16.3",
     "mongo-morgan": "^2.0.3",
     "mongodb": "^3.1.6",
-    "mongoose": "^5.2.17",
+    "mongoose": "^5.2.18",
     "morgan": "^1.9.1"
-  }
+  },
+  "description": ""
 }
